# task1_ogrodoot

./: README.md
install/: local_setup.sh  setup.sh
install/ros2_rover_interfaces/share/ros2_rover_interfaces/: package.bash  package.zsh
log/: latest_build
src/ros2_rover/: package.xml  setup.cfg  setup.py
src/ros2_rover/ros2_rover/config/: waypoints.yaml
src/ros2_rover/ros2_rover/nodes/: autonav_node.py  camera_node.py  delivery_node.py  equipment_node.py  gnss_simulator.py  manual_teleop.py  mission_manager.py  science_node.py  turtlesim_controller.py  vision_detector.py
src/ros2_rover_interfaces/: CMakeLists.txt  package.xml
src/ros2_rover_interfaces/action/: PickDeliver.action
src/ros2_rover_interfaces/srv/: CaptureImage.srv
src/ros2_rover_repo/launch/: full_system.launch.py
