<?xml version="1.0"?>
<package format="3">
  <name>ros2_rover</name>
  <version>0.0.1</version>
  <description>ROS2 Rover URC simulation package (Turtlesim + camera + missions)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>ros2_rover_interfaces</exec_depend>
  <exec_depend>opencv4</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
