<?xml version="1.0"?>
<package format="3">
  <name>ros2_rover_interfaces</name>
  <version>0.0.0</version>
  <description>Interface definitions for ros2_rover.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

 <member_of_group>rosidl_interface_packages</member_of_group>
 
<export>
  <build_type>ament_cmake</build_type>

</export>

</package>
